Prevent address element text overflow
Line breaks are useful on long words that would overflow their line box in order to maintain readability.

--- a/source/reset.scss
+++ b/source/reset.scss
@@ -37,6 +37,7 @@ body {
 
 address {
   font-style: normal;
+  overflow-wrap: break-word;
 }
 
 // Blockquote
